# 2017-tfm-vanessa-fernandez

./: README.md
Example Python in C++/: call_function  call_function.cpp  hello  hello.cpp  multiply  multiply.cpp  mytest.py  test  test.cpp
Examples Deep Learning/CNN/: net.py
Examples Deep Learning/CNN/Keras/: cnn.py  multi_gpu.py
Examples Deep Learning/CNN/Tensorflow/: cnn_mnist.py
Examples Deep Learning/LSTM/Keras/: cnn_lstm.py  cnn_lstm_images.py  lstm_imdb.py  lstm_multiple.py
Examples Deep Learning/LSTM/Tensorflow/: lstm.py  lstm_mnist.py
Examples Deep Learning/Neural Network Regression/Tensorflow/: data.csv  net.py
Examples of GUI C++/Example 1/: simple  simple.cpp
Examples of GUI C++/Example 2/: simple  simple.cpp
Examples of GUI C++/Example 3/: helloworld.cpp  helloworld.h  main  main.cpp
Follow Line/: add_classification_data.py  analysis_data.py  analysis_regression_data.py  analysis_vectors.py  entropy_meassure.py  evaluate_class.py  generator.py  measure_difference.py  save_differences.py
Follow Line/Dataset/: data.json
Follow Line/Dataset/Train/: train.json
Follow Line/Failed_driving/: corrected_data.json  data.json  measures.txt  test.py
Follow Line/Failed_driving/4v_7w/: corrected_data.json  data.json
Follow Line/First steps/: dataset_generator.py  net.py
Follow Line/circuit_launch/: f1-curve.launch  f1-monaco.launch  f1-small.launch
Follow Line/circuit_worlds/: circuit_curve.world  f1-simple-circuit.world  monacoLineROS.world  nurburgrinLineROS.world  smallCircuit.world
Follow Line/dl-driver/: MyAlgorithm.py  README.md  driver.py  driver.yml  requirements.txt
Memoria/: Bibliografia.bib  Presentación.pptx  main.tex
Memoria/capitulos/: 0-Acronimos.tex  0-Agradecimientos.tex  0-Portada.tex  0-Resumen.tex  1-Introduccion.tex  2-Objetivos.tex  3-Estado_arte.tex  4-Infraestructura.tex  5-Redes_clasificacion.tex  6-Redes_regresion.tex  7-Conclusiones.tex
Simple net Object detection/car_detection/: detectionImages.py
Simple net Object detection/person_detection/: detection.py
State of the art/: bmvc_final.aux  bmvc_final.bbl  bmvc_final.bcf  bmvc_final.blg  bmvc_final.dvi  bmvc_final.run.xml  bmvc_final.tex  egbib.bib
State of the art/PlantillaEstadoDelArte/: BMVC_MS_Office_2007_final.docx  egbib.bib
Tutorials c++/Hello/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello
dl_objectdetector/: README.md  objectdetector.py  objectdetector.yml
dl_objectdetector/Camera/: camera.py  threadcamera.py
dl_objectdetector/GUI/: gui.py  threadgui.py
dl_objectdetector/Net/: network.py  threadnetwork.py
docs/: _config.yml  index.html  index.md  week1.md  week2.md
docs/weeks/: week1.md  week10.md  week11.md  week12.md  week13.md  week14.md  week15.md  week16.md  week17_18.md  week19.md  week2.md  week20.md  week21.md  week22.md  week23.md  week24.md  week25.md  week26.md  week27.md  week28.md  week29.md  week30.md  week31.md  week32.md  week33.md  week34.md  week35_36.md  week37.md  week38.md  week3_4.md  week5_6.md  week7.md  week8.md  week9.md
follow line/dataset/: speeds.txt
objectdetectorc++/: CMakeLists.txt  hello.py  objectdetector  objectdetector.cpp  objectdetector.glade  objectdetector.yml  viewer.cpp  viewer.h
(+124 files in other folders)
